Run web apps with java instead of gradle in benches