@@ -1,7 +1,19 @@
+#!/bin/bash
+
 cd ../../ || exit
 
-./gradlew runQuarkus -DbenchTimeout=1 -Dorg.gradle.jvmargs="-Xms512M -Xmx16g" -Djdk.tracePinnedThreads > benches/ab/quarkus.log &
+./gradlew build > benches/ab/gradle-build.log 2>&1 &
 PID_GRADLE=$!
+
+while ! grep -qE 'BUILD SUCCESSFUL|BUILD FAILED' benches/ab/gradle-build.log; do
+  if ! ps -p $PID_GRADLE > /dev/null; then
+    echo "Gradle build process has terminated unexpectedly."
+    exit 1
+  fi
+  sleep 1
+done
+
+java -Xms512M -Xmx16g -DbenchTimeout=1 -jar pssr-benchmark-quarkus/build/libs/pssr-benchmark-quarkus-1.0-SNAPSHOT-all.jar > benches/ab/quarkus.log &
 
 cd benches/ab || exit
 
@@ -12,7 +24,7 @@ done
 
 PID_QUARKUS=$(grep -oP 'on PID \K[0-9]+' quarkus.log)
 
-echo ":::::::::::::::::::::::::::::::     Gradle running PID = $PID_GRADLE"
+echo ":::::::::::::::::::::::::::::::     Gradle running PID = $PID_QUARKUS"
 echo ":::::::::::::::::::::::::::::::     Quarkus running PID = $PID_QUARKUS"
 
 #
@@ -62,19 +74,17 @@ echo "##########################################"
 
 # Gracefully terminate the Spring Boot application.
 # It will send a SIGTERM corresponding to Exit code 143.
-kill $PID_GRADLE
 kill $PID_QUARKUS
 
 # Wait for the process to exit
-wait $PID_GRADLE
+wait $PID_QUARKUS
 
 
 echo ":::::::::::::::::::::::::::::::     Sync Bench Done"
 
 cd ../../ || exit
 
-./gradlew runQuarkusVirtual -Dorg.gradle.jvmargs="-Xms512M -Xmx16g" -DbenchTimeout=1 > benches/ab/quarkus.log &
-PID_GRADLE=$!
+java -Xms512M -Xmx16g -DbenchTimeout=1 -Dquarkus.virtual-threads.enabled=true -jar pssr-benchmark-quarkus/build/libs/pssr-benchmark-quarkus-1.0-SNAPSHOT-all.jar > benches/ab/quarkus.log &
 
 cd benches/ab || exit
 
@@ -85,7 +95,7 @@ done
 
 PID_QUARKUS=$(grep -oP 'on PID \K[0-9]+' quarkus.log)
 
-echo ":::::::::::::::::::::::::::::::     Gradle running PID = $PID_GRADLE"
+echo ":::::::::::::::::::::::::::::::     Gradle running PID = $PID_QUARKUS"
 echo ":::::::::::::::::::::::::::::::     Quarkus running PID = $PID_QUARKUS"
 
 #
@@ -107,11 +117,10 @@ echo "##########################################"
 ./run-ab.sh "${ROUTES[@]}" | tee quarkus-results-virtual.log
 
 if [ "$GH" != "true" ]; then
-  kill $PID_GRADLE
   kill $PID_QUARKUS
 
   # Wait for the process to exit
-  wait $PID_GRADLE
+  wait $PID_QUARKUS
 fi
 
 echo ":::::::::::::::::::::::::::::::     Virtual Bench Done"
