@@ -1,7 +1,19 @@
+#!/bin/bash
+
 cd ../.. || exit
 
-./gradlew runQuarkus -DbenchTimeout=1 -Dorg.gradle.jvmargs="-Xms512M -Xmx16g" -Djdk.tracePinnedThreads > benches/jmeter/quarkus.log &
+./gradlew build > benches/ab/gradle-build.log 2>&1 &
 PID_GRADLE=$!
+
+while ! grep -qE 'BUILD SUCCESSFUL|BUILD FAILED' benches/ab/gradle-build.log; do
+  if ! ps -p $PID_GRADLE > /dev/null; then
+    echo "Gradle build process has terminated unexpectedly."
+    exit 1
+  fi
+  sleep 1
+done
+
+java -Xms512M -Xmx16g -DbenchTimeout=1 -jar pssr-benchmark-quarkus/build/libs/pssr-benchmark-quarkus-1.0-SNAPSHOT-all.jar > benches/jmeter/quarkus.log &
 
 cd benches/jmeter || exit
 
@@ -49,19 +61,17 @@ echo "##########################################"
 
 # Gracefully terminate the Quarkus application.
 # It will send a SIGTERM corresponding to Exit code 143.
-kill $PID_GRADLE
 kill $PID_QUARKUS
 
 # Wait for the process to exit
-wait $PID_GRADLE
+wait $PID_QUARKUS
 
 
 echo ":::::::::::::::::::::::::::::::     Sync Bench Done"
 
 cd ../../ || exit
 
-./gradlew runQuarkusVirtual -DbenchTimeout=1 -Dorg.gradle.jvmargs="-Xms512M -Xmx16g" > benches/jmeter/quarkus.log &
-PID_GRADLE=$!
+java -Xms512M -Xmx16g -DbenchTimeout=1 -Dquarkus.virtual-threads.enabled=true -jar pssr-benchmark-quarkus/build/libs/pssr-benchmark-quarkus-1.0-SNAPSHOT-all.jar > benches/jmeter/quarkus.log &
 
 cd benches/jmeter || exit
 
@@ -84,11 +94,10 @@ echo "##########################################"
 ./run-jmeter.sh "${ROUTES[@]}" | tee quarkus-results-virtual.log
 
 if [ "$GH" != "true" ]; then
-  kill $PID_GRADLE
   kill $PID_QUARKUS
 
   # Wait for the process to exit
-  wait $PID_GRADLE
+  wait $PID_QUARKUS
 fi
 
 echo ":::::::::::::::::::::::::::::::     Virtual Bench Done"
